src/tests/snapshots/cclv__tests__view_snapshots__bug_entry_indices_not_visible_in_rendered_output.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────┐
││  1 First message content                                │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
