src/tests/snapshots/cclv__tests__view_snapshots__bug_header_mismatch_initial.snap
---
source: src/tests/view_snapshots.rs
expression: output.clone()
---
Model: claude-opus-4-5-20251101 | Main Agent | /test | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main Agent │ toolu_subagent1 │ toolu_subagent2                                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (2 entries)────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
││  2 Main agent message 1                                                                                             │
│── 100 in / 50 out / $0.01 | Context: 100 (0%) ──                                                                     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
