src/tests/snapshots/cclv__tests__view_snapshots__bug_help_popup_after_scroll.snap
---
source: src/tests/view_snapshots.rs
expression: after_scroll.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main                                                                         │
└───────────┌ Keyboard Shortcuts ──────────────────────────────────┐───────────┘
┌Main [Opus]│Navigation                                            │───────────┐
││  1 Minima│  j/↓         Scroll down                             │           │
│── ↓1/1 ↑1/│  k/↑         Scroll up                               │           │
│           │  h/←         Scroll left (for long lines)            │           │
│           │  l/→         Scroll right                            │           │
│           │  Ctrl+d/Page Down Page down                          │           │
│           │  Ctrl+u/Page Up   Page up                            │           │
│           │  g/Home      Go to top                               │           │
│           │  G/End       Go to bottom                            │           │
│           │                                                      │           │
│           │Pane Focus                                            │           │
│           │  Tab         Cycle focus between panes               │           │
│           │  1           Focus main agent pane                   │           │
│           │  2           Focus subagent pane                     │           │
│           └─────────────── Press Esc or ? to close ──────────────┘           │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
