src/tests/snapshots/cclv__tests__view_snapshots__bug_help_popup_mouse_scroll_after.snap
---
source: src/tests/view_snapshots.rs
expression: after_scroll.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────┐
│ Main         ┌ Keyboard Shortcuts ────────────────────────────────────────────────┐              │
└──────────────│Navigation                                                          │──────────────┘
┌Main [Opus] (1│  j/↓         Scroll down                                           │──────────────┐
│              │  k/↑         Scroll up                                             │              │
││  2 First mes│  h/←         Scroll left (for long lines)                          │              │
│              │  l/→         Scroll right                                          │              │
││  3 Response │  Ctrl+d/Page Down Page down                                        │              │
│              │  Ctrl+u/Page Up   Page up                                          │              │
││  4 Second me│  g/Home      Go to top                                             │              │
│              │  G/End       Go to bottom                                          │              │
││  5 Response │                                                                    │              │
│              └────────────────────── Press Esc or ? to close ─────────────────────┘              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
