src/tests/snapshots/cclv__tests__view_snapshots__bug_initial_screen_blank_until_keypress.snap
---
source: src/tests/view_snapshots.rs
expression: output
---
Model: Unknown | Main Agent | ? | 0 tools, 0 agents, 0 skills
┌Conversations─────────────────────────────────────────────────────────────────┐
│ Main Agent                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Main Agent (20 entries)───────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
││  3 Let me understand the task:                                              │
││                                                                             │
││    1. I'm a coordinator agent that CANNOT read/write code directly          │
││    (+10 more lines)                                                         │
│── 9 in / 1 out / $0.06 | Context: 37.4k (18%) ──                             │
││  4 I'll start by loading the required skill and then following the coordinat│
││    or protocol.                                                             │
│── 9 in / 1 out / $0.06 | Context: 74.9k (37%) ──                             │
││  5 🔧  Tool: Skill                                                           │
││      {                                                                      │
││        "skill": "efficient-subagent-orchestration"                          │
││      }                                                                      │
│── 9 in / 1 out / $0.06 | Context: 112.3k (56%) ──                            │
││  6 🔧  Tool: Skill                                                           │
││      {                                                                      │
││        "skill": "beads-project-tracking"                                    │
││      }                                                                      │
│── 9 in / 1 out / $0.06 | Context: 149.7k (74%) ──                            │
││  7 Launching skill: efficient-subagent-orchestration                        │
│                                                                              │
││  8 Base directory for this skill: /home/claude/.claude/skills/efficient-suba│
││    gent-orchestration                                                       │
││                                                                             │
││    (+180 more lines)                                                        │
│                                                                              │
││  9 Launching skill: beads-project-tracking                                  │
│                                                                              │
││ 10 Base directory for this skill: /home/claude/.claude/skills/beads-project-│
││    tracking                                                                 │
││                                                                             │
││    (+218 more lines)                                                        │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
