src/tests/snapshots/cclv__tests__view_snapshots__bug_jerky_scroll_after.snap
---
source: src/tests/view_snapshots.rs
expression: after_str
---
││    First entry line 2                                                       │
││    First entry line 3                                                       │
│                                                                              │
││  2 Second entry line 1                                                      │
││    Second entry line 2                                                      │
│                                                                              │
││  3 Third entry - single line                                                │
│                                                                              │
