src/tests/snapshots/cclv__tests__view_snapshots__bug_mouse_clicks_non_last_session.snap
---
source: src/tests/view_snapshots.rs
expression: after_tab_click_non_last.clone()
---
┌Conversations─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Main │ toolu_01DEfQddExUyZs1r9z6THScM │ toolu_01MXGXpkHkWxmSjJswAV1dLc │ toolu_01SA5Pockrn73MHHwa24cwq9 │ toolu_01To4EpAmDWLJGFrWyzKr4jp │ toolu_01VNHBYrBWyPxX7eNRi87Egw │ toolu_01VzXGo1GJ1LkH6gMvc│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌toolu_01DEfQddExUyZs1r9z6THScM [Sonnet] (69 entries)──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
││  1 ## Task: Create flake.nix for Claude Code Log Viewer (cclv)                                                                                                                                      │
││                                                                                                                                                                                                     │
││    Bead ID: cclv-07v.1.1                                                                                                                                                                            │
││                                                                                                                                                                                                     │
││    ## Context Files (READ THESE FIRST)                                                                                                                                                              │
││                                                                                                                                                                                                     │
││    - /home/claude/cclv/specs/001-claude-code-log-viewer/plan.md - Contains exact flake structure                                                                                                    │
││    - /home/claude/cclv/CLAUDE.md - Project overview                                                                                                                                                 │
││                                                                                                                                                                                                     │
││    ## Requirements                                                                                                                                                                                  │
││                                                                                                                                                                                                     │
││    WHERE: /home/claude/cclv/flake.nix                                                                                                                                                               │
││                                                                                                                                                                                                     │
││    WHAT: Create Nix flake with:                                                                                                                                                                     │
││                                                                                                                                                                                                     │
││    - nixpkgs release-25.05 (latest stable)                                                                                                                                                          │
││    - flake-parts for multi-system support                                                                                                                                                           │
││    - treefmt-nix for formatting                                                                                                                                                                     │
││    - rust-overlay for Rust toolchain                                                                                                                                                                │
││    - naersk for building Rust packages                                                                                                                                                              │
││                                                                                                                                                                                                     │
││    Configure systems:                                                                                                                                                                               │
││                                                                                                                                                                                                     │
││    - x86_64-linux                                                                                                                                                                                   │
││    - aarch64-linux                                                                                                                                                                                  │
││    - aarch64-darwin                                                                                                                                                                                 │
││    - x86_64-darwin                                                                                                                                                                                  │
││                                                                                                                                                                                                     │
││    Rust toolchain setup:                                                                                                                                                                            │
││                                                                                                                                                                                                     │
││    - Use rust-bin.stable.latest.default                                                                                                                                                             │
││    - Extensions: rust-src, rust-analyzer                                                                                                                                                            │
││    - Musl targets: x86_64-unknown-linux-musl, aarch64-unknown-linux-musl                                                                                                                            │
││                                                                                                                                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
[LIVE] │ Session 1/24 │ Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
